Trying to fix jumping text

--- a/css.css
+++ b/css.css
@@ -34,10 +34,8 @@ body{
 }
 .container {
     display:none;
-    width: 80%; 
-    margin: 0 auto; 
-    padding: 20px; 
-    margin-bottom: 50px;
+    width: 80%;
+    margin:0 auto;
 }
 .listainer{
     padding-top:30px;
@@ -46,17 +44,19 @@ body{
     gap:0;
     justify-content: space-evenly;
 }
+
 a {
     text-decoration: none;
     color: #fae81d;
 }
 ul {
+    width: 33.33333333%;
     list-style-type: none;
 }
 
 li{
     text-align: center;
-    width: 300px;
+
 }
 img {
     height: 120px;
@@ -90,9 +90,6 @@ footer
         width:100%;
         padding: 5px;
     }
-    .listainer{
-        justify-content: space-evenly;
-    }
     .booster
     {
         height:50px!important;
@@ -108,6 +105,7 @@ footer
     ul
     {
         font-size: 8pt;
+        width: 30%;
         padding: 0;
     }
     li
